# RoboBoat-2019

./: .gitignore  Coding Skeleton  README.md
Eagle Files/: CH6 IMU and GPS.b#1  CH6 IMU and GPS.b#2  CH6 IMU and GPS.b#3  CH6 IMU and GPS.b#4  CH6 IMU and GPS.brd  CH6 IMU and GPS.s#2  CH6 IMU and GPS.s#3
Eagle Files/CH6 IMU and Adafruit GPS breakout/: CH6 IMU and GPS.s#1  CH6 IMU and GPS.s#4  CH6 IMU and GPS.sch
LoRA E-stop System/Estop_LED_check/: Estop_LED_check.ino
LoRA E-stop System/LoRa_HeartBeat_receiver_neopixel/: LoRa_HeartBeat_receiver_neopixel.ino  README.md
LoRA E-stop System/LoRa_HeartBeat_sender_withOLEDStatus/: LoRa_HeartBeat_sender_withOLEDStatus.ino  README.md
On-site Testing and Data/: GPS Task Way Points (Course A)  GPS_Task_Way_Points  GPS_Task_Way_Points.txt  README.md  Tuesday_Morning_Testing.md
Python Scripts/: README.md
Python Scripts/CH6 IMU and GPS/: CH6_IMUwithGPS.py
Python Scripts/Navigation Scripts/: speed.py
Python Scripts/Status Communication/: status_serial_communication_test.py
Python Scripts/T200 Basic Control/: T200_basic_control.py
Python Scripts/UM6 IMU and GPS/: UM6_IMUwithGPS.py  UM6_IMUwithGPS.py.bak  UM6_IMUwithGPS_orig.py
Python Scripts/Utility Scripts/: RoboBoat_thrust.py  geographic_calculations.py
ROS/: README.md
ROS/EStop_Comms/: estop_comms.py
ROS/Launch/: base.launch  jetson.launch  rpi.launch  rpi.sh
ROS/RoboBoat_EStop/: roboboat_status.py
ROS/RoboBoat_teleop/scripts/: RoboBoat_cmd_vel_to_thrusters.py
ROS/TD_network_status/: TD_TCP_StatusServer.py
ROS/estop_comms/: CMakeLists.txt  package.xml  setup.py
ROS/estop_comms/launch/: estop_comms.launch
ROS/estop_comms/nodes/: estop_comms.py
ROS/imu_um7/: CMakelists.txt  package.xml  setup.py
ROS/imu_um7/launch/: viz.launch
ROS/imu_um7/nodes/: imu_pose.py  imu_raw_mag_compass.py  imu_um7_node.py
ROS/roboboat_bagfile_processing/launch/: export_zed_images.launch
ROS/roboboat_control/: CMakeLists.txt  package.xml
ROS/roboboat_control/config/: control.yaml  empty.yaml  gps_localization.yaml  localization.yaml  localization_currentBest.yaml
ROS/roboboat_control/launch/: control.launch  gps_localization.launch  gps_navsat_transform.launch  localization.launch  teleop.launch  zed_localization.launch
ROS/roboboat_description/: CMakeLists.txt  package.xml
ROS/roboboat_description/launch/: display.launch  gazebo.launch
ROS/roboboat_description/urdf/: roboboat_catamaran.csv  roboboat_catamaran.urdf
ROS/roboboat_estop_comms/launch/: estop_comms.launch
ROS/roboboat_navigation/: CMakeLists.txt  package.xml
ROS/roboboat_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml  planner_RoboBoat.yaml
ROS/roboboat_navigation/launch/: amcl_demo.launch  exploration.launch  exploration_demo.launch  gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
ROS/roboboat_navigation/nodes/: GPS_waypoints.py  navigation_supervisor.py  speed_challenge.py
ROS/roboboat_td_network_status/: package.xml  setup.py
ROS/roboboat_td_network_status/launch/: TD_TCP_StatusServer.launch
ROS/roboboat_td_network_status/nodes/: TD_TCP_StatusServer.py
ROS/roboboat_teleop/: CMakeLists.txt  package.xml
ROS/roboboat_teleop/launch/: usv_joydrive.launch
ROS/roboboat_teleop/scripts/: RoboBoat_cmd_vel_to_thrusters_test.py
ROS/roboboat_tf/: tf.launch
ROS/roboboat_viz/: CMakeLists.txt  package.xml
ROS/roboboat_viz/launch/: view_model.launch  view_robot.launch
ROS/roboboat_viz/rviz/: robot.rviz
ROS/roboboat_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/td_network_status/: CMakeLists.txt
ROS/td_network_status/nodes/: TD_TCP_StatusServer.py
ROS/tf/: tf.launch
ROS/um7 with GPS/: manifest.xml
ROS/um7 with GPS/calibration/: default.yaml
Settings Files/: ROS specific baschrc.MD  pi_temp.sh  raspi_tmux.sh  tmux.conf
T200 Basic Control/: T200_basic_control.py
(+10 files in other folders)
