<?xml version="1.0"?>
<package>
  <name>roboboat_control</name>
  <version>0.0.1</version>
  <description>2019 RoboBoat controller configurations</description>

  <author email="joshua.vaughan@louisiana.edu">Joshua Vaughan</author>
  <author email="joshua.vaughan@louisiana.edu">Joshua Vaughan</author>

  <maintainer email="joshua.vaughan@louisiana.edu">Joshua Vaughan</maintainer>
  <maintainer email="joshua.vaughan@louisiana.edu">Joshua Vaughan</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ucs.louisiana.edu/~jev9637/research/RoboBoat_2019.html</url>
  <url type="bugtracker">https://github.com/CRAWlab/RoboBoat-2019/issues</url>
  <url type="repository">https://github.com/CRAWlab/RoboBoat-2019</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>roboboat_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
